--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive fruit website - Bedimcode</title>
+      <title>Quilino y Villa Quilino</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -26,19 +26,19 @@
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
                   <li class="nav__item">
-                     <a href="#home" class="nav__link active-link">Home</a>
+                     <a href="#home" class="nav__link active-link">Inicio</a>
                   </li>
 
                   <li class="nav__item">
-                     <a href="#about" class="nav__link">About Us</a>
+                     <a href="hcd.html" class="nav__link">HCD</a>
                   </li>
 
                   <li class="nav__item">
-                     <a href="#popular" class="nav__link">Popular</a>
+                     <a href="obras.html" class="nav__link">Obras</a>
                   </li>
 
                   <li class="nav__item">
-                     <a href="#join" class="nav__link">Join Us</a>
+                     <a href="contacto.html" class="nav__link">Contacto</a>
                   </li>
                </ul>
 
@@ -78,81 +78,55 @@
        </div>
        <img src="assets/img/logoimg-removebg-preview.png" alt="image" class="home__img">
    </div>
-   <img src="assets/img/banner-image.jpg" alt="banner image" class="home__banner">
 </section>
-<style>
-   .home__banner {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: -1; /* Esto asegura que la imagen esté detrás del contenido */
+
+<section class="about section" id="about">
+   <div class="about__container container">
+      
+      <div class="about__img-carousel">
+         <img src="assets/img/bannermuni.jpg" alt="image" class="about__img active">
+         <img src="assets/img/other-image1.jpg" alt="image" class="about__img">
+         <img src="assets/img/other-image2.jpg" alt="image" class="about__img">
+         <!-- Agrega más imágenes según sea necesario -->
+      </div>
+   </div>
+</section>
+<script>
+   const aboutImgs = document.querySelectorAll('.about__img');
+let index = 0;
+
+function nextImage() {
+   aboutImgs[index].classList.remove('active');
+   index = (index + 1) % aboutImgs.length;
+   aboutImgs[index].classList.add('active');
 }
 
+setInterval(nextImage, 5000); // Cambia la imagen cada 5 segundos (5000 milisegundos)
+
+</script>
+
+<style>
+   .about__container {
+   position: relative;
+   overflow: hidden;
+}
+
+.about__img-carousel {
+   display: flex;
+   transition: transform 0.5s ease;
+}
+
+.about__img {
+   width: 100%;
+   border-radius: 25px;
+}
+
+.active {
+   opacity: 1;
+}
+
+
 </style>
-
-         <!--==================== ENJOY ====================-->
-         <section class="enjoy section">
-            <h2 class="section__title">
-               Eat And Enjoy
-            </h2>
-
-            <div class="enjoy__container container grid">
-               <article class="enjoy__card">
-                  <div class="enjoy__bg"></div>
-
-                  <img src="assets/img/enjoy-1.png" alt="image" class="enjoy__img">
-                  <h3 class="enjoy__title">Healthy</h3>
-                  <span class="enjoy__subtitle">Tropical Fruit</span>
-               </article>
-
-               <article class="enjoy__card">
-                  <div class="enjoy__bg"></div>
-
-                  <img src="assets/img/enjoy-2.png" alt="image" class="enjoy__img">
-                  <h3 class="enjoy__title">Delicious</h3>
-                  <span class="enjoy__subtitle">Field Fruit</span>
-               </article>
-
-               <article class="enjoy__card">
-                  <div class="enjoy__bg"></div>
-                  
-                  <img src="assets/img/enjoy-3.png" alt="image" class="enjoy__img">
-                  <h3 class="enjoy__title">Organic</h3>
-                  <span class="enjoy__subtitle">Tropical Fruit</span>
-               </article>
-            </div>
-         </section>
-
-         <!--==================== ABOUT US ====================-->
-         <section class="about section" id="about">
-            <div class="about__container container grid">
-               <div class="about__data">
-                  <h2 class="section__title">
-                     We Provide <br>
-                     Healthy Fruits
-                  </h2>
-
-                  <p class="about__description">
-                     The fruits come to us from the best 
-                     harvests, planted with the care required to 
-                     obtain the best quality fruit, enjoying its 
-                     flavors and taking care of your health.
-                  </p>
-
-                  <a href="#" class="button">
-                     Know More
-                  </a>
-
-                  <img src="assets/img/fruit-line-1.png" alt="image" class="about__fruit">
-               </div>
-
-               <img src="assets/img/about-fruits.png" alt="image" class="about__img">
-            </div>
-
-            <img src="assets/img/branch-1.png" alt="image" class="about__branch">
-         </section>
-
          <!--==================== POPULAR ====================-->
          <section class="popular section" id="popular">
             <h2 class="section__title">
