subiendo mas cambios

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/logoimg-removebg-preview.png" type="image/x-icon">
-
       <!--=============== REMIXICONS ===============-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
@@ -155,10 +153,9 @@ setInterval(nextImage, 5000); // Cambia la imagen cada 5 segundos (5000 milisegu
                   <span class="popular__subtitle">Informativo Oficial</span>
                   <!-- <h3 class="popular__price">$7.00</h3> -->
 
-                  <button class="popular__button button">
-                     <a href=""></a>
+                  <a href="boletin.html" class="popular__button button">
                    <i class="ri-arrow-right-circle-line"></i>
-                  </button>
+                  </a>
                </article>
 
                <article class="popular__card">
