--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/logoimg-removebg-preview.png" type="image/x-icon">
       <!--=============== REMIXICONS ===============-->
@@ -79,52 +83,34 @@
 </section>
 
 <section class="about section" id="about">
-   <div class="about__container container">
-      
-      <div class="about__img-carousel">
-         <img src="assets/img/bannermuni.jpg" alt="image" class="about__img active">
-         <img src="assets/img/other-image1.jpg" alt="image" class="about__img">
-         <img src="assets/img/other-image2.jpg" alt="image" class="about__img">
-         <!-- Agrega más imágenes según sea necesario -->
+   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-   </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/img/bannermuni.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bannermuni.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/bannermuni.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 </section>
-<script>
-   const aboutImgs = document.querySelectorAll('.about__img');
-let index = 0;
 
-function nextImage() {
-   aboutImgs[index].classList.remove('active');
-   index = (index + 1) % aboutImgs.length;
-   aboutImgs[index].classList.add('active');
-}
-
-setInterval(nextImage, 5000); // Cambia la imagen cada 5 segundos (5000 milisegundos)
-
-</script>
-
-<style>
-   .about__container {
-   position: relative;
-   overflow: hidden;
-}
-
-.about__img-carousel {
-   display: flex;
-   transition: transform 0.5s ease;
-}
-
-.about__img {
-   width: 100%;
-   border-radius: 25px;
-}
-
-.active {
-   opacity: 1;
-}
-
-
-</style>
          <!--==================== POPULAR ====================-->
          <section class="popular section" id="popular">
             <h2 class="section__title">
