subiendo mas cambios

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        <img src="assets/img/logoimg-removebg-preview.png" alt="image" class="home__img">
    </div>
 </section>
-
+<!-- 
 <section class="about section" id="about">
    <div style="margin: 20px 20px;" id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -109,7 +109,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-</section>
+</section> -->
 
          <!--==================== POPULAR ====================-->
          <section class="popular section" id="popular">
