--- a/boletin.html
+++ b/boletin.html
@@ -36,7 +36,7 @@
             margin-bottom: 50px;
             font-size: 2.5rem;
             color: #2C3E50;
-            background: linear-gradient(to right, #3498db, #9b59b6);
+            background: linear-gradient(to right, #16a085, #27ae60);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
