--- a/autoridades.html
+++ b/autoridades.html
@@ -21,7 +21,7 @@
       <header class="header" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo">
-               <img src="assets/img/logoblanco.png" alt=""> 
+               <img src="assets/img/logo.png" alt=""> 
             </a>
 
             <div class="nav__menu" id="nav-menu">
