--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
                <article class="popular__card">
                   <div class="popular__bg"></div>
                   
-                  <img src="assets/img/escritor.png" alt="image" class="popular__img">
+                  <img src="assets/img/poema.png" alt="image" class="popular__img">
                   <h3 class="popular__title">Autoridades</h3>
                   <span class="popular__subtitle">Autoridades Municipales</span>
-                  <!-- <h3 class="popular__price">$4.00</h3> -->
-
                   <a href="autoridades.html" class="popular__button button">
                    <i class="ri-arrow-right-circle-line"></i>
                   </a>
@@ -106,7 +104,7 @@
                <article class="popular__card">
                   <div class="popular__bg"></div>
 
-                  <img src="assets/img/boletin-informativo.png" alt="image" class="popular__img">
+                  <img src="assets/img/periodico.png" alt="image" class="popular__img">
                   <h3 class="popular__title">Boletin Informativo</h3>
                   <span class="popular__subtitle">Informativo Oficial</span>
                   <!-- <h3 class="popular__price">$7.00</h3> -->
@@ -141,7 +139,7 @@
                <article class="popular__card">
                   <div class="popular__bg"></div>
 
-                  <img src="assets/img/galeria.png" alt="image" class="popular__img">
+                  <img src="assets/img/galeria-de-imagenes.png" alt="image" class="popular__img">
                   <h3 class="popular__title">Galeria</h3>
                   <span class="popular__subtitle">Galeria de imagenes</span>
                   <a href="galeria.html" class="popular__button button">
@@ -152,7 +150,7 @@
                <article class="popular__card">
                   <div class="popular__bg"></div>
 
-                  <img src="assets/img/saludable.png" alt="image" class="popular__img">
+                  <img src="assets/img/hospital.png" alt="image" class="popular__img">
                   <h3 class="popular__title">Salud</h3>
                   <span class="popular__subtitle">Seccion de Salud</span>
                   <a href="salud.html" class="popular__button button">
